# docs/swagger.yaml
@@ -1,5 +1,34 @@
 basePath: /api
 definitions:
+  file.File:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      owner_id:
+        description: 所有者用户ID
+        type: integer
+      parent_id:
+        description: 父目录ID，根目录为0
+        type: integer
+      size:
+        type: integer
+      type:
+        description: file or folder
+        type: string
+      upload_time:
+        type: string
+    type: object
+  file.ListFilesResponse:
+    properties:
+      files:
+        items:
+          $ref: '#/definitions/file.File'
+        type: array
+      total:
+        type: integer
+    type: object
   user.LoginRequest:
     properties:
       password:
@@ -35,6 +64,57 @@ info:
   title: CloudDrive API
   version: "1.0"
 paths:
+  /files:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定目录下的文件和文件夹，支持分页和排序
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 父目录ID，根目录为0
+        in: query
+        name: parent_id
+        type: integer
+      - description: 页码，默认1
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量，默认10
+        in: query
+        name: page_size
+        type: integer
+      - description: 排序字段，默认upload_time
+        in: query
+        name: order_by
+        type: string
+      - description: 排序方式，asc/desc，默认desc
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/file.ListFilesResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: 获取文件/文件夹列表
+      tags:
+      - 文件模块
   /user/login:
     post:
       consumes:
